--- a/css1.css
+++ b/css1.css
@@ -1,451 +1,427 @@
-<!-- styleing ofwhole nav-->
-
-*/{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    font-family: 'roboto', sans-serif;
-    background-color: black;
-}
-*/
-
-.navbar{
-    position: sticky;
-    top: 0;
-    left: 0;
-    width: 100%;
-    background: black;
-    z-index: 9;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: 'roboto', sans-serif;
 }
 
-.nav{
-    padding: 10px 10vw;
-    display: flex;
-    justify-content: space-between;
-    background-color: black;
+body {
+  background-color: black;
 }
 
-.brand-logo{
-    height: 50px;
+.navbar {
+  position: sticky;
+  top: 0;
+  left: 0;
+  width: 100%;
+  background: black;
+  z-index: 9;
 }
 
-.brand-logo1{
-    height: 80px;
+.nav {
+  padding: 10px 10vw;
+  display: flex;
+  justify-content: space-between;
+  background-color: black;
 }
 
-.nav-items{
-    display: flex;
-    align-items: center;
+.brand-logo {
+  height: 50px;
 }
 
-.search{
-    width: 500px;
-    display: flex;
+.brand-logo1 {
+  height: 80px;
 }
 
-.search-box{
-    width: 80%;
-    height: 40px;
-    padding: 10px;
-    border-top-left-radius: 10px;
-    border-bottom-left-radius: 10px;
-    border: 1px solid #d1d1d1;
-    text-transform: capitalize;
-    background: none;
-    color: #a9a9a9;
-    outline: none;
+.nav-items {
+  display: flex;
+  align-items: center;
 }
 
-.search-btn{
-    width: 20%;
-    height: 40px;
-    padding: 10px 20px;
-    border: none;
-    outline: none;
-    cursor: pointer;
-    background: #383838;
-    color: #fff;
-    text-transform: capitalize;
-    font-size: 15px;
-    border-top-right-radius: 10px;
-    border-bottom-right-radius: 10px;
+.search {
+  width: 100%;
+  display: flex;
 }
 
-.search-box::placeholder{
-    color: #a9a9a9;
+.search-box {
+  flex: 1;
+  height: 40px;
+  padding: 10px;
+  border-top-left-radius: 10px;
+  border-bottom-left-radius: 10px;
+  border: 1px solid #d1d1d1;
+  text-transform: capitalize;
+  background: none;
+  color: #a9a9a9;
+  outline: none;
 }
 
-.nav-items a{
-    margin-left: 20px;
+.search-btn {
+  width: 20%;
+  height: 40px;
+  padding: 10px 20px;
+  border: none;
+  outline: none;
+  cursor: pointer;
+  background: #383838;
+  color: #fff;
+  text-transform: capitalize;
+  font-size: 15px;
+  border-top-right-radius: 10px;
+  border-bottom-right-radius: 10px;
 }
 
-.nav-items a img{
-    width: 40px;
+.search-box::placeholder {
+  color: #a9a9a9;
 }
 
-.links-container{
-    width: 100%;
-    display: flex;
-    padding: 10px 10vw;
-    justify-content: center;
-    list-style: none;
-    border-top: 1px solid #d1d1d1;
-
+.nav-items a {
+  margin-left: 20px;
 }
 
-/*comment
-for home women men accessories about */
-
-.link{
-    text-transform: capitalize;
-    padding: 0 10px;
-    margin: 0 10px;
-    text-decoration: none;
-    color: #d00606;
-    transition: .5s;
-    font-size: 30px;
+.nav-items a img {
+  width: 40px;
 }
 
-.link:hover{
-    opacity: 1;
+.links-container {
+  width: 100%;
+  display: flex;
+  padding: 10px 10vw;
+  justify-content: center;
+  list-style: none;
+  border-top: 1px solid #d1d1d1;
 }
 
-.navbar1{
-    position: sticky;
-    top: 0;
-    left: 0;
-    width: 100%;
-    background: #ffffff;
-    z-index: 9;
-display:flex;
-background-color: black;
+.link {
+  text-transform: capitalize;
+  padding: 0 10px;
+  margin: 0 10px;
+  text-decoration: none;
+  color: #d00606;
+  transition: .5s;
+  font-size: 30px;
 }
 
-/*
-styling for products view
-*/
-
-.product{
-    position: relative;
-    overflow: hidden;
-    padding: 20px 0;
+.link:hover {
+  opacity: 1;
 }
 
-.product-category{
-    padding: 0 10vw;
-    font-size: 30px;
-    font-weight: 500;
-    margin-bottom: 40px;
-    text-transform: capitalize;
-}
-.product-container{
-    padding: 0 10vw;
-    display: flex;
-    overflow-x: auto;
-    scroll-behavior: smooth;
+.product {
+  position: relative;
+  overflow: hidden;
+  padding: 20px 0;
 }
 
-.product-container::-webkit-scrollbar{
-    display: none;
+.product-category {
+  padding: 0 10vw;
+  font-size: 30px;
+  font-weight: 500;
+  margin-bottom: 40px;
+  text-transform: capitalize;
 }
 
-.product-card{
-    flex: 0 0 auto;
-    width: 250px;
-    height: 550px;
-    margin-right: 40px;
+.product-container {
+  padding: 0 10vw;
+  display: flex;
+  overflow-x: auto;
+  scroll-behavior: smooth;
 }
 
-.product-image{
-    position: relative;
-    width: 100%;
-    height: 350px;
-    overflow: hidden;
+.product-container::-webkit-scrollbar {
+  display: none;
 }
 
-.product-thumb{
-    width: 100%;
-    height: 350px;
-    object-fit: cover;
+.product-card {
+  flex: 0 0 auto;
+  width: 250px;
+  height: 550px;
+  margin-right: 40px;
 }
 
-
-.card-btn{
-    position: absolute;
-    bottom: 10px;
-    left: 50%;
-    transform: translateX(-50%);
-    padding: 10px;
-    width: 90%;
-    text-transform: capitalize;
-    border: none;
-    outline: none;
-    background: #fff;
-    border-radius: 5px;
-    transition: 0.5s;
-    cursor: pointer;
-    opacity: 0;
+.product-image {
+  position: relative;
+  width: 100%;
+  height: 350px;
+  overflow: hidden;
 }
 
-.product-card:hover .card-btn{
-    opacity: 1;
+.product-thumb {
+  width: 100%;
+  height: 350px;
+  object-fit: cover;
 }
 
-.card-btn:hover{
-    background: #efefef;
+.card-btn {
+  position: absolute;
+  bottom: 10px;
+  left: 50%;
+  transform: translateX(-50%);
+  padding: 10px;
+  width: 90%;
+  text-transform: capitalize;
+  border: none;
+  outline: none;
+  background: #fff;
+  border-radius: 5px;
+  transition: 0.5s;
+  cursor: pointer;
+  opacity: 0;
 }
 
-.product-info{
-    width: 100%;
-    height: 100px;
-    padding-top: 10px;
+.product-card:hover .card-btn {
+  opacity: 1;
 }
 
-.price{
-    font-weight: 900;
-    font-size: 20px;
+.card-btn:hover {
+  background: #efefef;
 }
 
-.actual-price{
-    margin-left: 20px;
-    opacity: 0.5;
-    text-decoration: line-through;
+.product-info {
+  width: 100%;
+  height: 100px;
+  padding-top: 10px;
 }
 
-.pre-btn, .nxt-btn{
-    border: none;
-    width: 10vw;
-    height: 100%;
-    position: absolute;
-    bottom: 0;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background: linear-gradient(90deg, rgba(255, 255, 255, 0) 0%, #fff 100%);
-    cursor: pointer;
-    z-index: 8;
+.price {
+  font-weight: 900;
+  font-size: 20px;
 }
 
-/*
-styling for footer
-*/
-footer{
-    position: relative;
-    width: 1195px;
-    padding: 40px 10vw;
-    padding-bottom: 80px;
-    background: #383838;
+.actual-price {
+  margin-left: 20px;
+  opacity: 0.5;
+  text-decoration: line-through;
 }
 
-.footer-content{
-    display: flex;
-    width: 90%;
-    justify-content: space-between;
+.pre-btn,
+.nxt-btn {
+  border: none;
+  width: 10vw;
+  height: 100%;
+  position: absolute;
+  bottom: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background: linear-gradient(90deg, rgba(255, 255, 255, 0) 0%, #fff 100%);
+  cursor: pointer;
+  z-index: 8;
 }
 
-.footer-content .logo{
-    height: 160px;
+footer {
+  position: relative;
+  width: 100%;
+  padding: 40px 10vw;
+  padding-bottom: 80px;
+  background: #383838;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
-.footer-ul-container{
-    width: 45%;
-    display: flex;
-    justify-content: space-between;
+.footer-content {
+  display: flex;
+  width: 90%;
+  justify-content: space-between;
 }
 
-.category{
-    width: 100px;
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    grid-gap: 10px;
-    list-style: none;
+.footer-content .logo {
+  height: 160px;
 }
 
-.category-title{
-    grid-column: span 2;
-    text-transform: capitalize;
-    color: #fff;
-    font-size: 20px;
-    margin-bottom: 20px;
+.footer-ul-container {
+  width: 45%;
+  display: flex;
+  justify-content: space-between;
 }
 
-.category .footer-link{
-    text-decoration: none;
-    text-transform: capitalize;
-    color: rgba(255, 255, 255, 0.75);
+.category {
+  width: 100px;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  grid-gap: 10px;
+  list-style: none;
 }
 
-.footer-link:hover{
-    color: #fff;
+.category-title {
+  grid-column: span 2;
+  text-transform: capitalize;
+  color: #fff;
+  font-size: 20px;
+  margin-bottom: 20px;
 }
 
-.footer-title, .info{
-    color: rgba(255, 255, 255, 0.75);
-    margin: 20px 0;
-    text-transform: none;
+.category .footer-link {
+  text-decoration: none;
+  text-transform: capitalize;
+  color: rgba(255, 255, 255, 0.75);
 }
 
-.footer-title{
-    margin-top: 80px;
-    color: #fff;
+.footer-link:hover {
+  color: #fff;
 }
 
-.footer-social-container{
-    margin-top: 40px;
-    display: flex;
-    justify-content: space-between;
+.footer-title,
+.info {
+  color: rgba(255, 255, 255, 0.75);
+  margin: 20px 0;
+  text-transform: none;
 }
 
-.social-link{
-    color: #fff;
-    margin-left: 20px;
-    text-transform: capitalize;
+.footer-title {
+  margin-top: 80px;
+  color: #fff;
 }
 
-.social-link:nth-child(1){
-    margin-left: 0;
+.footer-social-container {
+  margin-top: 40px;
+  display: flex;
+  justify-content: space-between;
 }
 
-.footer-credit{
-    width: 90%;
-    padding: 10px;
-    position: absolute;
-    left: 0;
-    bottom: 0;
-    text-align: center;
-    color: #fff;
-    background: rgba(0, 0, 0, 0.2);
+.social-link {
+  color: #fff;
+  margin-left: 20px;
+  text-transform: capitalize;
 }
 
-/*
-styling for product details
-*/
-.product-details{
-    width: 80%;
-    padding: 60px 10vw;
-    display: flex;
-    justify-content: space-between;
+.social-link:nth-child(1) {
+  margin-left: 0;
 }
 
-
-
-.product-details img{
-    width: 564px;
-    height: 860px;
-    object-fit: cover;
-    cursor: pointer;
+.footer-credit {
+  width: 90%;
+  padding: 10px;
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  text-align: center;
+  color: #fff;
+  background: rgba(0, 0, 0, 0.2);
 }
 
-.product-images img.active{
-    opacity: 0.5;
+.product-details {
+  width: 100%;
+  padding: 60px 10vw;
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
 }
 
-.details{
-    width: 50%;
+.product-details img {
+  max-width: 100%;
+  height: auto;
+  object-fit: cover;
+  cursor: pointer;
 }
 
-.details .product-brand{
-    text-transform: capitalize;
-    font-size: 30px;
+.product-images img.active {
+  opacity: 0.5;
 }
 
-.details .product-short-des{
-    font-size: 25px;
-    line-height: 30px;
-    height: auto;
-    margin: 15px 0 30px;
+.details {
+  width: 50%;
 }
 
-.product-price{
-    font-weight: 700;
-    font-size: 30px;
+.details .product-brand {
+  text-transform: capitalize;
+  font-size: 30px;
 }
 
-.product-actual-price{
-    font-size: 30px;
-    opacity: 0.5;
-    text-decoration: line-through;
-    margin: 0 20px;
-    font-weight: 300;
+.details .product-short-des {
+  font-size: 25px;
+  line-height: 30px;
+  height: auto;
+  margin: 15px 0 30px;
 }
 
-.product-discount{
-    color: #ff7d7d;
-    font-size: 20px;
+.product-price {
+  font-weight: 700;
+  font-size: 30px;
 }
 
-.product-sub-heading{
-    font-size: 30px;
-    text-transform: uppercase;
-    margin: 60px 0 10px;
-    font-weight: 300;
+.product-actual-price {
+  font-size: 30px;
+  opacity: 0.5;
+  text-decoration: line-through;
+  margin: 0 20px;
+  font-weight: 300;
 }
 
-.size-radio-btn{
-    display: inline-block;
-    width: 80px;
-    height: 80px;
-    text-align: center;
-    font-size: 20px;
-    border: 1px solid #383838;
-    border-radius: 50%;
-    margin: 10px;
-    margin-left: 0;
-    line-height: 80px;
-    text-transform: uppercase;
-    background: #383838;
-    color: #fff;
-    cursor: pointer;
+.product-discount {
+  color: #ff7d7d;
+  font-size: 20px;
 }
 
-.btn{
-    width: 48%;
-    padding: 20px;
-    border-radius: 5px;
-    background: none;
-    border: 1px solid #383838;
-    color: #383838;
-    font-size: 20px;
-    cursor: pointer;
-    margin: 20px 0;
-    text-transform: capitalize;
+.product-sub-heading {
+  font-size: 30px;
+  text-transform: uppercase;
+  margin: 60px 0 10px;
+  font-weight: 300;
 }
 
-.btn:hover{
-background:#383838;
-color:#fff;
+.size-radio-btn {
+  display: inline-block;
+  width: 80px;
+  height: 80px;
+  text-align: center;
+  font-size: 20px;
+  border: 1px solid #383838;
+  border-radius: 50%;
+  margin: 10px;
+  margin-left: 0;
+  line-height: 80px;
+  text-transform: uppercase;
+  background: #383838;
+  color: #fff;
+  cursor: pointer;
 }
 
-.detail-des{
-    padding: 0 10vw;
-    text-transform: capitalize;
+.btn {
+  width: 48%;
+  padding: 20px;
+  border-radius: 5px;
+  background: none;
+  border: 1px solid #383838;
+  color: #383838;
+  font-size: 20px;
+  cursor: pointer;
+  margin: 20px 0;
+  text-transform: capitalize;
 }
 
-.heading{
-    font-size: 30px;
-    margin-bottom: 30px;
+.btn:hover {
+  background: #383838;
+  color: #fff;
 }
 
-.des{
-    color: #383838;
-    line-height: 55px;
-    font-size: 25px;
+.detail-des {
+  padding: 0 10vw;
+  text-transform: capitalize;
 }
 
-/*
-for 404 page 
-*/
-.four-0-four-image{
-    display: block;
-    margin: 60px auto;
+.heading {
+  font-size: 30px;
+  margin-bottom: 30px;
 }
 
-.four-0-four-msg{
-    text-align: center;
-    text-transform: capitalize;
-    color: #383838;
+.des {
+  color: #383838;
+  line-height: 55px;
+  font-size: 25px;
 }
 
-.four-0-four-msg a{
-    color: #383838;
+.four-0-four-image {
+  display: block;
+  margin: 60px auto;
+}
+
+.four-0-four-msg {
+  text-align: center;
+  text-transform: capitalize;
+  color: #383838;
+}
+
+.four-0-four-msg a {
+  color: #383838;
 }
