--- a/css1.css
+++ b/css1.css
@@ -425,3 +425,79 @@ footer {
 .four-0-four-msg a {
   color: #383838;
 }
+
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
+
+body {
+  font-family: Arial, sans-serif;
+}
+
+.container {
+  max-width: 100%;
+  padding: 10px;
+}
+
+.product-card {
+  width: 100%;
+  margin-bottom: 20px;
+  background-color: #f7f7f7;
+  border-radius: 5px;
+  box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.1);
+}
+
+.product-card .card-img {
+  width: 100%;
+  height: 200px;
+  object-fit: cover;
+  border-top-left-radius: 5px;
+  border-top-right-radius: 5px;
+}
+
+.product-card .card-content {
+  padding: 10px;
+}
+
+.product-card .card-title {
+  font-size: 18px;
+  font-weight: bold;
+  margin-bottom: 5px;
+}
+
+.product-card .card-price {
+  font-size: 16px;
+  color: #888;
+  margin-bottom: 10px;
+}
+
+.product-card .card-description {
+  font-size: 14px;
+  color: #555;
+  margin-bottom: 10px;
+}
+
+.product-card .card-btn {
+  display: block;
+  width: 100%;
+  padding: 10px;
+  text-align: center;
+  background-color: #333;
+  color: #fff;
+  text-decoration: none;
+  border-bottom-left-radius: 5px;
+  border-bottom-right-radius: 5px;
+}
+
+.product-card:hover .card-img {
+  opacity: 0.8;
+}
+
+@media screen and (min-width: 576px) {
+  .product-card {
+    width: calc(50% - 20px);
+    margin-right: 20px;
+  }
+}
